#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package XtcInput
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-10-21
2015-09-29 David Schneider
- catch XTCLiveTimeout so user doesn't have to. JIRA PSAS-188

Tag: V00-10-20
2015-09-24 David Schneider
- reduce each stream read ahead from 64 to 20 to reduce latency with
  live data (from 3.2 seconds to 1 second for a typical 6 stream experiment). 
  Consequently less split events and out of order data will will be fixed 
  up by psana in live/xtc mode (as opposed to index mode)
	
Tag: V00-10-19
2015-09-23 David Schneider
- final support for liveAvail feature in this package(JIRA PSAS-184)
- fix bug and unit test from last checkins
- change RunFileIterLive to work with set of runs rather than Runs/interval type
- add MutexLock class so XtcStreamMerger can protect data used in both threads
- add LiveAvail (high level interface to feature) & StreamAvail (does counting) classes
- DgramReader - takes a reference to a LiveAvail shared pointer to set if in live mode
- XtcStreamDgIter - returns latest dg in queue for feature
- note, once reader thread destroys XtcStreamMerger, liveAvail always returns False	

Tag: V00-10-18
2015-09-21 David Schneider
- Final class for upcoming liveAvail feature (JIRA PSAS-184)

Tag: V00-10-17
2015-09-17 David Schneider
- Add building blocks for upcoming liveAvail feature (JIRA PSAS-184)
- presently not used, should not change anything
	
Tag: V00-10-16
2015-09-09 David Schneider
- Changes to how psana processes input files:
  Remove one-stream feature JIRA PSAS-185
  For XtcInput, only process first dataset spec, or list of files
- general refactors JIRA PSAS-186

Tag: V00-10-15
2015-05-28 David Schneider