@@ -11,6 +11,12 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-10-22
+2015-10-16 David Schneider
+- add code to address JIRA PSAS-192. This is hack code to trap for 
+  a corrupt data condition that we think happens while reading from 
+  the end of live .inprogress files.
+
 Tag: V00-10-21
 2015-09-29 David Schneider
 - catch XTCLiveTimeout so user doesn't have to. JIRA PSAS-188
